Updated title description on index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
   <meta meta charset="utf-8">
-    <title>Brianna Nicole Jackson UI/UX Designer</title>
+    <title>Brianna Nicole Jackson UI/UX Designer & Professional Badass</title>
   </head>
 
   <body>
