Added project data to <main> section

--- a/EMPWR.html
+++ b/EMPWR.html
@@ -62,7 +62,86 @@
 
 <!-- hero -->
 <main>
-
+  <div>
+    <div>
+      <h1>EMPWR: a Strength Training App for Women</h1>
+    </div>
+    <div>
+      <h2>Introduction</h2>
+      <p>As part of the CareerFoundry UI Design course, I chose to create a strength training native app, designed for iOS and Android.</p>
+    </div>
+    <div>
+      <picture>
+        <source srcset="img/empwr/EMPWR-01_600px.jpg" media="(max-width:767px)">
+        <img src="img/empwr/EMPWR-01_1200px.jpg" alt="EMPWR Introduction">
+      </picture>
+    </div>
+    <div>
+      <picture>
+        <source srcset="img/empwr/EMPWR-02_600px.jpg" media="(max-width:767px)">
+        <img src="img/empwr/EMPWR-02_1200px.jpg" alt="EMPWR Approach">
+      </picture>
+    </div>
+    <div>
+      <picture>
+        <source srcset="img/empwr/EMPWR-03_600px.jpg" media="(max-width:767px)">
+        <img src="img/empwr/EMPWR-03_1200px.jpg" alt="EMPWR Research">
+      </picture>
+    </div>
+    <div>
+      <picture>
+        <source srcset="img/empwr/EMPWR-04_600px.jpg" media="(max-width:767px)">
+        <img src="img/empwr/EMPWR-04_1200px.jpg" alt="EMPWR Brand Development">
+      </picture>
+    </div>
+    <div>
+      <picture>
+        <source srcset="img/empwr/EMPWR-05_600px.jpg" media="(max-width:767px)">
+        <img src="img/empwr/EMPWR-05_1200px.jpg" alt="EMPWR Ideate">
+      </picture>
+    </div>
+    <div>
+      <picture>
+        <source srcset="img/empwr/EMPWR-06_600px.jpg" media="(max-width:767px)">
+        <img src="img/empwr/EMPWR-06_1200px.jpg" alt="EMPWR Wireframe brief">
+      </picture>
+    </div>
+    <div>
+      <picture>
+        <source srcset="img/empwr/EMPWR-07_600px.jpg" media="(max-width:767px)">
+        <img src="img/empwr/EMPWR-07_1200px.jpg" alt="EMPWR Wireframes iOS and Android">
+      </picture>
+    </div>
+    <div>
+      <picture>
+        <source srcset="img/empwr/EMPWR-08_600px.jpg" media="(max-width:767px)">
+        <img src="img/empwr/EMPWR-08_1200px.jpg" alt="EMPWR User Testing">
+      </picture>
+    </div>
+    <div>
+      <picture>
+        <source srcset="img/empwr/EMPWR-09_600px.jpg" media="(max-width:767px)">
+        <img src="img/empwr/EMPWR-09_1200px.jpg" alt="EMPWR Hi-fidelity Wireframes">
+      </picture>
+    </div>
+    <div>
+      <picture>
+        <source srcset="img/empwr/EMPWR-10_600px.jpg" media="(max-width:767px)">
+        <img src="img/empwr/EMPWR-10_1200px.jpg" alt="EMPWR iOS Prototype">
+      </picture>
+    </div>
+    <div>
+      <picture>
+        <source srcset="img/empwr/EMPWR-11_600px.jpg" media="(max-width:767px)">
+        <img src="img/empwr/EMPWR-11_1200px.jpg" alt="EMPWR Android Prototype">
+      </picture>
+    </div>
+    <div>
+      <picture>
+        <source srcset="img/empwr/EMPWR-12_600px.jpg" media="(max-width:767px)">
+        <img src="img/empwr/EMPWR-12_1200px.jpg" alt="EMPWR Perspective Mockup">
+      </picture>
+    </div>
 <!-- end hero -->
     </main>
 
