--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <div>
             <h3>EMPWR</h3>
             <p>A strength training app for women, designed for iOS and Android.
-              <a href="">View</a>
+              <a href="EMPWR.html">View</a>
             </p>
             </div>
           </div>
