Added page link to Take Note project

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div>
               <h3>Take Note</h3>
               <p>A minimal note taking app for iOS.
-                <a href="">View</a>
+                <a href="takenote.html">View</a>
               </p>
               </div>
             </div>
