Added page link to Bienvenue project

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <div>
                 <h3>Bienvenue á la Maison</h3>
                 <p>A French cooking responsive web app featuring a database of easy to follow recipes.
-                  <a href="">View</a>
+                  <a href="bienvenue.html">View</a>
                 </p>
                 </div>
               </div>
