Added content to the <main> section of dailygrounds.html

--- a/dailygrounds.html
+++ b/dailygrounds.html
@@ -76,8 +76,84 @@
         <img src="img/dailygrounds/DAiLYGROUNDS-01_1200px.jpg" alt="DAiLYGROUNDS Cover">
       </picture>
     </div>
-
-
+    <div>
+      <picture>
+        <source srcset="img/dailygrounds/DAiLYGROUNDS-02_600px.jpg" media="(max-width:767px)">
+        <img src="img/dailygrounds/DAiLYGROUNDS-02_1200px.jpg" alt="DAiLYGROUNDS Introduction">
+      </picture>
+    </div>
+    <div>
+      <picture>
+        <source srcset="img/dailygrounds/DAiLYGROUNDS-03_600px.jpg" media="(max-width:767px)">
+        <img src="img/dailygrounds/DAiLYGROUNDS-03_1200px.jpg" alt="DAiLYGROUNDS Guiding Principles">
+      </picture>
+    </div>
+    <div>
+      <picture>
+        <source srcset="img/dailygrounds/DAiLYGROUNDS-04_600px.jpg" media="(max-width:767px)">
+        <img src="img/dailygrounds/DAiLYGROUNDS-04_1200px.jpg" alt="DAiLYGROUNDS Perspective Mockups">
+      </picture>
+    </div>
+    <div>
+      <picture>
+        <source srcset="img/dailygrounds/DAiLYGROUNDS-05_600px.jpg" media="(max-width:767px)">
+        <img src="img/dailygrounds/DAiLYGROUNDS-05_1200px.jpg" alt="DAiLYGROUNDS Brand Guide">
+      </picture>
+    </div>
+    <div>
+      <picture>
+        <source srcset="img/dailygrounds/DAiLYGROUNDS-06_600px.jpg" media="(max-width:767px)">
+        <img src="img/dailygrounds/DAiLYGROUNDS-06_1200px.jpg" alt="DAiLYGROUNDS User Stories">
+      </picture>
+    </div>
+    <div>
+      <picture>
+        <source srcset="img/dailygrounds/DAiLYGROUNDS-07_600px.jpg" media="(max-width:767px)">
+        <img src="img/dailygrounds/DAiLYGROUNDS-07_1200px.jpg" alt="DAiLYGROUNDS User Flows">
+      </picture>
+    </div>
+    <div>
+      <picture>
+        <source srcset="img/dailygrounds/DAiLYGROUNDS-08_600px.jpg" media="(max-width:767px)">
+        <img src="img/dailygrounds/DAiLYGROUNDS-08_1200px.jpg" alt="DAiLYGROUNDS Low-fidelity Wireframes">
+      </picture>
+    </div>
+    <div>
+      <picture>
+        <source srcset="img/dailygrounds/DAiLYGROUNDS-09_600px.jpg" media="(max-width:767px)">
+        <img src="img/dailygrounds/DAiLYGROUNDS-09_1200px.jpg" alt="DAiLYGROUNDS Mid-fidelity Wireframes">
+      </picture>
+    </div>
+    <div>
+      <picture>
+        <source srcset="img/dailygrounds/DAiLYGROUNDS-10_600px.jpg" media="(max-width:767px)">
+        <img src="img/dailygrounds/DAiLYGROUNDS-10_1200px.jpg" alt="DAiLYGROUNDS Hi-fidelity Wireframes">
+      </picture>
+    </div>
+    <div>
+      <picture>
+        <source srcset="img/dailygrounds/DAiLYGROUNDS-11_600px.jpg" media="(max-width:767px)">
+        <img src="img/dailygrounds/DAiLYGROUNDS-11_1200px.jpg" alt="DAiLYGROUNDS User Testing">
+      </picture>
+    </div>
+    <div>
+      <picture>
+        <source srcset="img/dailygrounds/DAiLYGROUNDS-12_600px.jpg" media="(max-width:767px)">
+        <img src="img/dailygrounds/DAiLYGROUNDS-12_1200px.jpg" alt="DAiLYGROUNDS Final Wireframes">
+      </picture>
+    </div>
+    <div>
+      <picture>
+        <source srcset="img/dailygrounds/DAiLYGROUNDS-13_600px.jpg" media="(max-width:767px)">
+        <img src="img/dailygrounds/DAiLYGROUNDS-13_1200px.jpg" alt="DAiLYGROUNDS Desktop Breakpoint">
+      </picture>
+    </div>
+    <div>
+      <picture>
+        <source srcset="img/dailygrounds/DAiLYGROUNDS-14_600px.jpg" media="(max-width:767px)">
+        <img src="img/dailygrounds/DAiLYGROUNDS-14_1200px.jpg" alt="DAiLYGROUNDS Perspective Mockup">
+      </picture>
+    </div>
 <!-- end hero -->
     </main>
 
