Added page link to DAiLYGROUNDS project

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <div>
                   <h3>DAiLYGROUNDS</h3>
                   <p>A subscription based ecommerce app for iOS, designed to auto-ship gourmet coffee 1x-4x per month.
-                    <a href="">View</a>
+                    <a href="dailygrounds.html">View</a>
                   </p>
                   </div>
                 </div>
