--- a/bienvenue.html
+++ b/bienvenue.html
@@ -124,6 +124,12 @@
         <img src="img/bienvenue/Bienvenue_09_1200px.jpg" alt="Bienvenue á La Maison Design Mockups">
       </picture>
     </div>
+    <div>
+      <picture>
+        <source srcset="img/bienvenue/bienvenue-animation.gif" media="(max-width:767px)">
+        <img src="img/bienvenue/bienvenue-animation.gif" alt="Bienvenue á La Maison Animation">
+      </picture>
+    </div>
 <!-- end hero -->
     </main>
 
