Added gif animation to <main> section

--- a/dailygrounds.html
+++ b/dailygrounds.html
@@ -154,6 +154,12 @@
         <img src="img/dailygrounds/DAiLYGROUNDS-14_1200px.jpg" alt="DAiLYGROUNDS Perspective Mockup">
       </picture>
     </div>
+    <div>
+      <picture>
+        <source srcset="img/dailygrounds/dailygrounds-animation.gif" media="(max-width:767px)">
+        <img src="img/dailygrounds/dailygrounds-animation.gif" alt="DAiLYGROUNDS Animation">
+      </picture>
+    </div>
 <!-- end hero -->
     </main>
 
