Added gif animations iOS and Android to <main> section

--- a/EMPWR.html
+++ b/EMPWR.html
@@ -142,6 +142,18 @@
         <img src="img/empwr/EMPWR-12_1200px.jpg" alt="EMPWR Perspective Mockup">
       </picture>
     </div>
+    <div>
+      <picture>
+        <source srcset="img/empwr/empwr-animation-iOS.gif" media="(max-width:767px)">
+        <img src="img/empwr/empwr-animation-iOS.gif" alt="EMPWR iOS Animation">
+      </picture>
+    </div>
+    <div>
+      <picture>
+        <source srcset="img/empwr/empwr-animation-android.gif" media="(max-width:767px)">
+        <img src="img/empwr/empwr-animation-android.gif" alt="EMPWR Android Animation">
+      </picture>
+    </div>
 <!-- end hero -->
     </main>
 
