Added viewport meta tag and unique IDs

--- a/about.html
+++ b/about.html
@@ -2,11 +2,19 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <link rel="icon" type="image/png" href="img/favicon-32x32-2.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="img/favicon-16x16-2.png" sizes="16x16" />
   <meta meta charset="utf-8">
-    <title>About Brianna Nicole</title>
-  </head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>About Brianna Nicole</title>
+  <!-- normalize -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <!-- style.css from the css directory -->
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet">
+  <!-- favicon -->
+    <link rel="icon" type="image/png" href="img/favicon-32x32-2.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="img/favicon-16x16-2.png" sizes="16x16" />
+    </head>
 
   <body>
 <!-- header -->
@@ -62,6 +70,7 @@
 
 <!-- hero -->
 <main>
+    <body id="hero">
   <div>
     <div>
       <h1>About</h1>
@@ -84,7 +93,7 @@
           </p>
           <p>Let’s work together! Please rech out if you think we’re a good fit. I’m always looking for fun ways to collaborate so feel free to send me a message and let’s chat!
           </p>
-          <a href=files/resume-brianna-nicole-jackson.pdf target="_blank">DOWNLOAD MY RESUME</a>
+          <a href=files/resume-brianna-nicole-jackson.pdf target="_blank" class="button">DOWNLOAD MY RESUME</a>
         </div>
 
         <div>
@@ -136,7 +145,7 @@
   <div>
       <h1>Introduce yourself</h1>
       <p><h2>Wanna hire me? Get to know me? Shoot me an email!</h2>
-        <a href="mailto:brianna@littlearrowstudio.com">Say hi</a>
+        <a href="mailto:brianna@littlearrowstudio.com" class="button">Say hi</a>
       </p>
   </div>
 
