--- a/index.html
+++ b/index.html
@@ -2,14 +2,23 @@
 <html lang="en" dir="ltr">
 
 <head>
+  <meta meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Brianna Nicole Jackson UI/UX Designer & Professional Badass</title>
+<!-- normalize -->
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+<!-- style.css from the css directory -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+<!-- favicon -->
   <link rel="icon" type="image/png" href="img/favicon-32x32-2.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="img/favicon-16x16-2.png" sizes="16x16" />
-  <meta meta charset="utf-8">
-    <title>Brianna Nicole Jackson UI/UX Designer & Professional Badass</title>
   </head>
 
   <body>
 <!-- header -->
+<header id="colorstrip">
   <header>
 <!-- navigation -->
   	<div>
@@ -62,16 +71,18 @@
 
 <!-- hero -->
 <main>
+  <body id="hero">
     <div>
       <div>
-        <h1>Hi, I'm Brianna.
-        <span><br>I’m a UI/UX designer, art director, visual designer and graphic designer from Oregon.</span></br></h1>
+        <h1>Hi, I'm Brianna.</h1>
+        <h2>I’m a UI/UX designer, art director, visual designer and graphic designer from Oregon.</h2>
         <p>I am currently looking for a UI/UX position where I can be creative, problem solve and design beautiful products that benefit people.</p>
     </div>
       </div>
 <!-- end hero -->
 
 <!-- work -->
+  <body id="work">
     <div>
       <div>
         <h2>My work</h2>
@@ -82,7 +93,7 @@
       <div>
             <h3>EMPWR</h3>
             <p>A strength training app for women, designed for iOS and Android.
-              <a href="EMPWR.html">View</a>
+              <a href="EMPWR.html" class="button">View</a>
             </p>
             </div>
           </div>
@@ -94,7 +105,7 @@
             <div>
               <h3>Take Note</h3>
               <p>A minimal note taking app for iOS.
-                <a href="takenote.html">View</a>
+              <a href="takenote.html" class="button">View</a>
               </p>
               </div>
             </div>
@@ -106,7 +117,7 @@
               <div>
                 <h3>Bienvenue á la Maison</h3>
                 <p>A French cooking responsive web app featuring a database of easy to follow recipes.
-                  <a href="bienvenue.html">View</a>
+              <a href="bienvenue.html" class="button">View</a>
                 </p>
                 </div>
               </div>
@@ -118,7 +129,7 @@
                 <div>
                   <h3>DAiLYGROUNDS</h3>
                   <p>A subscription based ecommerce app for iOS, designed to auto-ship gourmet coffee 1x-4x per month.
-                    <a href="dailygrounds.html">View</a>
+              <a href="dailygrounds.html" class="button">View</a>
                   </p>
                   </div>
                 </div>
@@ -133,7 +144,7 @@
   <div>
       <h1>Introduce yourself</h1>
       <p><h2>Wanna hire me? Get to know me? Shoot me an email!</h2>
-        <a href="mailto:brianna@littlearrowstudio.com">Say hi</a>
+        <a href="mailto:brianna@littlearrowstudio.com" class="button">Say hi</a>
       </p>
   </div>
 
