--- a/EMPWR.html
+++ b/EMPWR.html
@@ -2,11 +2,19 @@
 <html lang="en" dir="ltr">
 
 <head>
+  <meta meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Brianna Nicole Jackson UI/UX Design EMPWR: a Strength Training App for Women</title>
+<!-- normalize -->
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+<!-- style.css from the css directory -->
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet">
+<!-- favicon -->
   <link rel="icon" type="image/png" href="img/favicon-32x32-2.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="img/favicon-16x16-2.png" sizes="16x16" />
-  <meta meta charset="utf-8">
-    <title>Brianna Nicole Jackson UI/UX Design EMPWR: a Strength Training App for Women</title>
-  </head>
+</head>
 
   <body>
 <!-- header -->
@@ -62,6 +70,7 @@
 
 <!-- hero -->
 <main>
+    <body id="hero">
   <div>
     <div>
       <h1>EMPWR: a Strength Training App for Women</h1>
@@ -163,7 +172,7 @@
   <div>
       <h1>Introduce yourself</h1>
       <p><h2>Wanna hire me? Get to know me? Shoot me an email!</h2>
-        <a href="mailto:brianna@littlearrowstudio.com">Say hi</a>
+        <a href="mailto:brianna@littlearrowstudio.com" class="button">Say hi</a>
       </p>
   </div>
 
