Placed id colorstrip inside div

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Brianna Nicole Jackson UI/UX Designer & Professional Badass</title>
+
 <!-- normalize -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 <!-- style.css from the css directory -->
@@ -17,9 +18,11 @@
   </head>
 
   <body>
-<!-- header -->
-<header id="colorstrip">
   <header>
+    
+<!-- top color strip -->
+    <div id="colorstrip"></div>
+
 <!-- navigation -->
   	<div>
   		<a href="index.html"><svg width="264px" height="175px" viewBox="0 0 264 175" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
