Fixed: social links, .gif sizing; page spacing

--- a/bienvenue.html
+++ b/bienvenue.html
@@ -18,24 +18,24 @@
 
   <body>
     <header>
-      <div class="container">
 <!-- navigation -->
-<a href="index.html">
-  <picture>
-    <div id="logo">
-    <source srcset="img/logo1.svg" media="(max-width:767px)">
-    <img src="img/logo1.svg" alt="logo" class="logo">
-  </picture>
-</a>
-<nav>
-  <ul>
-     <li><a href="index.html">Work</a></li>
-     <li><a href="about.html">About</a></li>
-     <li><a href="#contact">Contact</a></li>
-  </ul>
-</nav>
+<div class="container red topBotomBordersOut">
+  <a href="index.html" class="noHover">
+    <picture>
+      <div id="logo">
+      <source srcset="img/logo1.svg" media="(max-width:767px)">
+      <img src="img/logo1.svg" alt="logo" class="logo">
+    </picture>
+  </a>
+  <nav>
+    <ul>
+       <li><a href="index.html">Work</a></li>
+       <li><a href="about.html">About</a></li>
+       <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
 </div>
-  </header>
+</header>
 <!-- end navigation -->
 
 <!-- hero -->
@@ -112,60 +112,64 @@ margin: 0 auto">
         <img src="img/bienvenue/Bienvenue_09_1200px.jpg" alt="Bienvenue á La Maison Design Mockups">
       </picture>
     </div>
+        <br />
     <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/bienvenue/bienvenue-animation.gif" media="(max-width:767px)">
-        <img src="img/bienvenue/bienvenue-animation.gif" alt="Bienvenue á La Maison Animation">
+        <img src="img/bienvenue/bienvenue-animation.gif" style="border: 2px solid #F0F0F0;" class="gifSmallView" alt="Bienvenue á La Maison Animation">
       </picture>
     </div>
+        <br />
 <!-- end hero -->
     </main>
 
 <!-- footer -->
 <footer>
-  <footer id="footer">
+  <footer id="contact">
   <div class="container">
     <h1>Introduce yourself</h1>
     <p><h2>Wanna hire me? Get to know me? Shoot me an email!</h2>
       <a href="mailto:brianna@littlearrowstudio.com" class="button">Say hi</a>
     </p>
   </div>
-
+<br />
 <!-- social media -->
-<div>
-<nav>
-    <ul>
-      <li><a href="http://www.instagram.com/lilbriez" target="_blank">
+<div class="social-links">
+<ul>
+ <li>
+   <a href="http://www.instagram.com/lilbriez" target="_blank">
       <picture>
-        <div id="social-links">
         <source srcset="files/instagram.png" media="(max-width:767px)">
         <img src="files/instagram.png" alt="social-links" class="social-links">
       </picture>
-    </a></li>
-    <li><a href="https://www.linkedin.com/in/brianna-nicole-jackson/" target="_blank">
+    </a>
+  </li>
+    <li>
+      <a href="https://www.linkedin.com/in/brianna-nicole-jackson/" target="_blank">
     <picture>
-      <div id="social-links">
       <source srcset="files/linkedin.png" media="(max-width:767px)">
       <img src="files/linkedin.png" alt="social-links" class="social-links">
     </picture>
-  </a></li>
-  <li><a href="https://www.behance.net/briannanicolejackson" target="_blank">
+  </a>
+</li>
+<li>
+  <a href="https://www.behance.net/briannanicolejackson" target="_blank">
   <picture>
-    <div id="social-links">
     <source srcset="files/behance.png" media="(max-width:767px)">
     <img src="files/behance.png" alt="social-links" class="social-links">
   </picture>
-</a></li>
-<li><a href="https://www.facebook.com/briannapie" target="_blank">
+</a>
+</li>
+<li>
+<a href="https://www.facebook.com/briannapie" target="_blank">
 <picture>
-  <div id="social-links">
   <source srcset="files/facebook.png" media="(max-width:767px)">
   <img src="files/facebook.png" alt="social-links" class="social-links">
 </picture>
-</a></li>
-      </ul>
-    </nav>
+</a>
+</li>
+</ul>
     </div>
 
     <div>
