--- a/EMPWR.html
+++ b/EMPWR.html
@@ -18,29 +18,28 @@
 
   <body>
     <header>
-      <div class="container">
 <!-- navigation -->
-<a href="index.html">
-  <picture>
-    <div id="logo">
-    <source srcset="img/logo1.svg" media="(max-width:767px)">
-    <img src="img/logo1.svg" alt="logo" class="logo">
-  </picture>
-</a>
-<nav>
-  <ul>
-     <li><a href="index.html">Work</a></li>
-     <li><a href="about.html">About</a></li>
-     <li><a href="#contact">Contact</a></li>
-  </ul>
-</nav>
+<div class="container red topBotomBordersOut">
+  <a href="index.html" class="noHover">
+    <picture>
+      <div id="logo">
+      <source srcset="img/logo1.svg" media="(max-width:767px)">
+      <img src="img/logo1.svg" alt="logo" class="logo">
+    </picture>
+  </a>
+  <nav>
+    <ul>
+       <li><a href="index.html">Work</a></li>
+       <li><a href="about.html">About</a></li>
+       <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
 </div>
-  </header>
+</header>
 <!-- end navigation -->
 
 <!-- hero -->
-<main style="max-width: 1200px;
-margin: 0 auto">
+<main style="max-width: 1200px; margin: 0 auto">
   <div id="hero">
     <div class="container">
       <h1>EMPWR: a Strength Training App for Women</h1>
@@ -52,99 +51,101 @@ margin: 0 auto">
     <div id="work">
       <div class="container">
       <picture>
-        <source srcset="img/empwr/EMPWR-01_600px.jpg" media="(max-width:767px)">
+        <source srcset="img/empwr/EMPWR-01_1200px.jpg" media="(max-width:767px)">
         <img src="img/empwr/EMPWR-01_1200px.jpg" alt="EMPWR Introduction">
       </picture>
     </div>
     <div id="work">
       <div class="container">
       <picture>
-        <source srcset="img/empwr/EMPWR-02_600px.jpg" media="(max-width:767px)">
+        <source srcset="img/empwr/EMPWR-02_1200px.jpg" media="(max-width:767px)">
         <img src="img/empwr/EMPWR-02_1200px.jpg" alt="EMPWR Approach">
       </picture>
     </div>
     <div id="work">
       <div class="container">
       <picture>
-        <source srcset="img/empwr/EMPWR-03_600px.jpg" media="(max-width:767px)">
+        <source srcset="img/empwr/EMPWR-03_1200px.jpg" media="(max-width:767px)">
         <img src="img/empwr/EMPWR-03_1200px.jpg" alt="EMPWR Research">
       </picture>
     </div>
     <div id="work">
       <div class="container">
       <picture>
-        <source srcset="img/empwr/EMPWR-04_600px.jpg" media="(max-width:767px)">
+        <source srcset="img/empwr/EMPWR-04_1200px.jpg" media="(max-width:767px)">
         <img src="img/empwr/EMPWR-04_1200px.jpg" alt="EMPWR Brand Development">
       </picture>
     </div>
     <div id="work">
       <div class="container">
       <picture>
-        <source srcset="img/empwr/EMPWR-05_600px.jpg" media="(max-width:767px)">
+        <source srcset="img/empwr/EMPWR-05_1200px.jpg" media="(max-width:767px)">
         <img src="img/empwr/EMPWR-05_1200px.jpg" alt="EMPWR Ideate">
       </picture>
     </div>
     <div id="work">
       <div class="container">
       <picture>
-        <source srcset="img/empwr/EMPWR-06_600px.jpg" media="(max-width:767px)">
+        <source srcset="img/empwr/EMPWR-06_1200px.jpg" media="(max-width:767px)">
         <img src="img/empwr/EMPWR-06_1200px.jpg" alt="EMPWR Wireframe brief">
       </picture>
     </div>
     <div id="work">
       <div class="container">
       <picture>
-        <source srcset="img/empwr/EMPWR-07_600px.jpg" media="(max-width:767px)">
+        <source srcset="img/empwr/EMPWR-07_1200px.jpg" media="(max-width:767px)">
         <img src="img/empwr/EMPWR-07_1200px.jpg" alt="EMPWR Wireframes iOS and Android">
       </picture>
     </div>
     <div id="work">
       <div class="container">
       <picture>
-        <source srcset="img/empwr/EMPWR-08_600px.jpg" media="(max-width:767px)">
+        <source srcset="img/empwr/EMPWR-08_1200px.jpg" media="(max-width:767px)">
         <img src="img/empwr/EMPWR-08_1200px.jpg" alt="EMPWR User Testing">
       </picture>
     </div>
     <div id="work">
       <div class="container">
       <picture>
-        <source srcset="img/empwr/EMPWR-09_600px.jpg" media="(max-width:767px)">
+        <source srcset="img/empwr/EMPWR-09_1200px.jpg" media="(max-width:767px)">
         <img src="img/empwr/EMPWR-09_1200px.jpg" alt="EMPWR Hi-fidelity Wireframes">
       </picture>
     </div>
     <div id="work">
       <div class="container">
       <picture>
-        <source srcset="img/empwr/EMPWR-10_600px.jpg" media="(max-width:767px)">
+        <source srcset="img/empwr/EMPWR-10_1200px.jpg" media="(max-width:767px)">
         <img src="img/empwr/EMPWR-10_1200px.jpg" alt="EMPWR iOS Prototype">
       </picture>
     </div>
     <div id="work">
       <div class="container">
       <picture>
-        <source srcset="img/empwr/EMPWR-11_600px.jpg" media="(max-width:767px)">
+        <source srcset="img/empwr/EMPWR-11_1200px.jpg" media="(max-width:767px)">
         <img src="img/empwr/EMPWR-11_1200px.jpg" alt="EMPWR Android Prototype">
       </picture>
     </div>
     <div id="work">
       <div class="container">
       <picture>
-        <source srcset="img/empwr/EMPWR-12_600px.jpg" media="(max-width:767px)">
+        <source srcset="img/empwr/EMPWR-12_1200px.jpg" media="(max-width:767px)">
         <img src="img/empwr/EMPWR-12_1200px.jpg" alt="EMPWR Perspective Mockup">
       </picture>
     </div>
+    <br />
     <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/empwr/empwr-animation-iOS.gif" media="(max-width:767px)">
-        <img src="img/empwr/empwr-animation-iOS.gif" alt="EMPWR iOS Animation">
+        <img src="img/empwr/empwr-animation-iOS.gif" style="border: 2px solid #F0F0F0;" class="gifSmallView" alt="EMPWR iOS Animation">
       </picture>
     </div>
+    <br />
     <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/empwr/empwr-animation-android.gif" media="(max-width:767px)">
-        <img src="img/empwr/empwr-animation-android.gif" alt="EMPWR Android Animation">
+        <img src="img/empwr/empwr-animation-android.gif" style="border: 2px solid #F0F0F0;" class="gifSmallView" alt="EMPWR Android Animation">
       </picture>
     </div>
 <!-- end hero -->
@@ -152,48 +153,50 @@ margin: 0 auto">
 
 <!-- footer -->
 <footer>
-  <footer id="footer">
+  <footer id="contact">
   <div class="container">
     <h1>Introduce yourself</h1>
     <p><h2>Wanna hire me? Get to know me? Shoot me an email!</h2>
       <a href="mailto:brianna@littlearrowstudio.com" class="button">Say hi</a>
     </p>
   </div>
-
+<br />
 <!-- social media -->
-<div>
-<nav>
-    <ul>
-      <li><a href="http://www.instagram.com/lilbriez" target="_blank">
+<div class="social-links">
+<ul>
+ <li>
+   <a href="http://www.instagram.com/lilbriez" target="_blank">
       <picture>
-        <div id="social-links">
         <source srcset="files/instagram.png" media="(max-width:767px)">
         <img src="files/instagram.png" alt="social-links" class="social-links">
       </picture>
-    </a></li>
-    <li><a href="https://www.linkedin.com/in/brianna-nicole-jackson/" target="_blank">
+    </a>
+  </li>
+    <li>
+      <a href="https://www.linkedin.com/in/brianna-nicole-jackson/" target="_blank">
     <picture>
-      <div id="social-links">
       <source srcset="files/linkedin.png" media="(max-width:767px)">
       <img src="files/linkedin.png" alt="social-links" class="social-links">
     </picture>
-  </a></li>
-  <li><a href="https://www.behance.net/briannanicolejackson" target="_blank">
+  </a>
+</li>
+<li>
+  <a href="https://www.behance.net/briannanicolejackson" target="_blank">
   <picture>
-    <div id="social-links">
     <source srcset="files/behance.png" media="(max-width:767px)">
     <img src="files/behance.png" alt="social-links" class="social-links">
   </picture>
-</a></li>
-<li><a href="https://www.facebook.com/briannapie" target="_blank">
+</a>
+</li>
+<li>
+<a href="https://www.facebook.com/briannapie" target="_blank">
 <picture>
-  <div id="social-links">
   <source srcset="files/facebook.png" media="(max-width:767px)">
   <img src="files/facebook.png" alt="social-links" class="social-links">
 </picture>
-</a></li>
-      </ul>
-    </nav>
+</a>
+</li>
+</ul>
     </div>
 
     <div>
