--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <header>
 <!-- navigation -->
   <div class="container red topBotomBordersOut">
+          <div class="navtoggle" id="myNavtoggle">
     <a href="index.html" class="noHover">
       <picture>
         <div id="logo">
@@ -32,7 +33,9 @@
       <ul>
   	     <li><a href="index.html">Work</a></li>
   	     <li><a href="about.html">About</a></li>
-  	     <li><a href="#contact">Contact</a></li>
+  	     <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
+         <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><img src="img/rainbow-menu.svg" <img class="noHover"></i></a></li>
+
       </ul>
     </nav>
 </div>
@@ -1107,11 +1110,12 @@ margin: 0 auto">
       </div>
 
       <div>
-      <p>© Brianna Nicole Jackson 2020</p>
+      <p>© Brianna Nicole Jackson 2021</p>
     </div>
   </footer>
 <!-- end footer -->
 
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="js/scripts.js"></script>
 
   </body>
