Corrected errors using W3C Validator

--- a/EMPWR.html
+++ b/EMPWR.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta meta charset="utf-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Brianna Nicole Jackson UI/UX Design EMPWR: a Strength Training App for Women</title>
 <!-- normalize -->
@@ -19,26 +19,28 @@
   <body>
     <header>
   <!-- navigation -->
-    <div class="container red topBotomBordersOut">
-            <div class="navtoggle" id="myNavtoggle">
-      <a href="index.html" class="noHover">
-        <picture>
-          <div id="logo">
-          <source srcset="img/logo1.svg" media="(max-width:767px)">
-          <img src="img/logo1.svg" alt="logo" class="logo">
-        </picture>
-      </a>
-      <nav>
-        <ul>
-    	     <li><a href="index.html">Work</a></li>
-    	     <li><a href="about.html">About</a></li>
-    	     <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
-           <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><img src="img/rainbow-menu.svg" <img class="noHover"></i></a></li>
+  <div class="container red topBotomBordersOut">
+          <div class="navtoggle" id="myNavtoggle">
+  <div id="logo">
+    <a href="index.html" class="noHover">
+      <picture>
+        <source srcset="img/logo1.svg" media="(max-width:767px)">
+        <img src="img/logo1.svg" alt="logo" class="logo">
+      </picture>
+    </a>
+    <nav>
+      <ul>
+  	     <li><a href="index.html">Work</a></li>
+  	     <li><a href="about.html">About</a></li>
+  	     <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
+         <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><img src="img/rainbow-menu.svg" alt="rainbow menu icon" class="noHover"></a></li>
 
-        </ul>
-      </nav>
+      </ul>
+    </nav>
+    </div>
   </div>
-  </header>
+</div>
+</header>
 <!-- end navigation -->
 
 <!-- hero -->
@@ -58,77 +60,66 @@
         <img src="img/empwr/EMPWR-01_1200px.jpg" alt="EMPWR Introduction">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/empwr/EMPWR-02_1200px.jpg" media="(max-width:767px)">
         <img src="img/empwr/EMPWR-02_1200px.jpg" alt="EMPWR Approach">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/empwr/EMPWR-03_1200px.jpg" media="(max-width:767px)">
         <img src="img/empwr/EMPWR-03_1200px.jpg" alt="EMPWR Research">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/empwr/EMPWR-04_1200px.jpg" media="(max-width:767px)">
         <img src="img/empwr/EMPWR-04_1200px.jpg" alt="EMPWR Brand Development">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/empwr/EMPWR-05_1200px.jpg" media="(max-width:767px)">
         <img src="img/empwr/EMPWR-05_1200px.jpg" alt="EMPWR Ideate">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/empwr/EMPWR-06_1200px.jpg" media="(max-width:767px)">
         <img src="img/empwr/EMPWR-06_1200px.jpg" alt="EMPWR Wireframe brief">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/empwr/EMPWR-07_1200px.jpg" media="(max-width:767px)">
         <img src="img/empwr/EMPWR-07_1200px.jpg" alt="EMPWR Wireframes iOS and Android">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/empwr/EMPWR-08_1200px.jpg" media="(max-width:767px)">
         <img src="img/empwr/EMPWR-08_1200px.jpg" alt="EMPWR User Testing">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/empwr/EMPWR-09_1200px.jpg" media="(max-width:767px)">
         <img src="img/empwr/EMPWR-09_1200px.jpg" alt="EMPWR Hi-fidelity Wireframes">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/empwr/EMPWR-10_1200px.jpg" media="(max-width:767px)">
         <img src="img/empwr/EMPWR-10_1200px.jpg" alt="EMPWR iOS Prototype">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/empwr/EMPWR-11_1200px.jpg" media="(max-width:767px)">
         <img src="img/empwr/EMPWR-11_1200px.jpg" alt="EMPWR Android Prototype">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/empwr/EMPWR-12_1200px.jpg" media="(max-width:767px)">
@@ -136,7 +127,6 @@
       </picture>
     </div>
     <br />
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/empwr/empwr-animation-iOS.gif" media="(max-width:767px)">
@@ -144,24 +134,23 @@
       </picture>
     </div>
     <br />
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/empwr/empwr-animation-android.gif" media="(max-width:767px)">
         <img src="img/empwr/empwr-animation-android.gif" style="border: 2px solid #F0F0F0;" class="gifSmallView" alt="EMPWR Android Animation">
       </picture>
     </div>
+  </div>
+</div>
 <!-- end hero -->
-    </main>
+</main>
 
 <!-- footer -->
-<footer>
   <footer id="contact">
   <div class="container">
     <h1>Introduce yourself</h1>
     <p><h2>Wanna hire me? Get to know me? Shoot me an email!</h2>
       <a href="mailto:brianna@littlearrowstudio.com" class="button">Say hi</a>
-    </p>
   </div>
 <br />
 <!-- social media -->
