--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta meta charset="utf-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>About Brianna Nicole</title>
   <!-- normalize -->
@@ -19,25 +19,27 @@
   <body>
     <header>
   <!-- navigation -->
-    <div class="container red topBotomBordersOut">
-            <div class="navtoggle" id="myNavtoggle">
-      <a href="index.html" class="noHover">
-        <picture>
-          <div id="logo">
-          <source srcset="img/logo1.svg" media="(max-width:767px)">
-          <img src="img/logo1.svg" alt="logo" class="logo">
-        </picture>
-      </a>
-      <nav>
-        <ul>
-    	     <li><a href="index.html">Work</a></li>
-    	     <li><a href="about.html">About</a></li>
-    	     <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
-           <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><img src="img/rainbow-menu.svg" <img class="noHover"></i></a></li>
+  <div class="container red topBotomBordersOut">
+          <div class="navtoggle" id="myNavtoggle">
+  <div id="logo">
+    <a href="index.html" class="noHover">
+      <picture>
+        <source srcset="img/logo1.svg" media="(max-width:767px)">
+        <img src="img/logo1.svg" alt="logo" class="logo">
+      </picture>
+    </a>
+  <nav>
+    <ul>
+       <li><a href="index.html">Work</a></li>
+       <li><a href="about.html">About</a></li>
+       <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
+       <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><img src="img/rainbow-menu.svg" alt="rainbow menu icon" class="noHover"></a></li>
 
-        </ul>
+    </ul>
       </nav>
+    </div>
   </div>
+</div>
   </header>
 <!-- end navigation -->
 
@@ -108,17 +110,16 @@
         </div>
     </div>
   </div>
+</div>
 </main>
 <!-- end hero -->
 
 <!-- footer -->
-<footer>
   <footer id="contact">
   <div class="container">
     <h1>Introduce yourself</h1>
     <p><h2>Wanna hire me? Get to know me? Shoot me an email!</h2>
       <a href="mailto:brianna@littlearrowstudio.com" class="button">Say hi</a>
-    </p>
   </div>
 <br />
 <!-- social media -->
