--- a/bienvenue.html
+++ b/bienvenue.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta meta charset="utf-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Brianna Nicole Jackson UI/UX Design Bienvenue á La Maison: a web responsive French cooking app</title>
 <!-- normalize -->
@@ -19,26 +19,28 @@
   <body>
     <header>
   <!-- navigation -->
-    <div class="container red topBotomBordersOut">
-            <div class="navtoggle" id="myNavtoggle">
-      <a href="index.html" class="noHover">
-        <picture>
-          <div id="logo">
-          <source srcset="img/logo1.svg" media="(max-width:767px)">
-          <img src="img/logo1.svg" alt="logo" class="logo">
-        </picture>
-      </a>
-      <nav>
-        <ul>
-    	     <li><a href="index.html">Work</a></li>
-    	     <li><a href="about.html">About</a></li>
-    	     <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
-           <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><img src="img/rainbow-menu.svg" <img class="noHover"></i></a></li>
+  <div class="container red topBotomBordersOut">
+          <div class="navtoggle" id="myNavtoggle">
+  <div id="logo">
+    <a href="index.html" class="noHover">
+      <picture>
+        <source srcset="img/logo1.svg" media="(max-width:767px)">
+        <img src="img/logo1.svg" alt="logo" class="logo">
+      </picture>
+    </a>
+    <nav>
+      <ul>
+  	     <li><a href="index.html">Work</a></li>
+  	     <li><a href="about.html">About</a></li>
+  	     <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
+         <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><img src="img/rainbow-menu.svg" alt="rainbow menu icon" class="noHover"></a></li>
 
-        </ul>
-      </nav>
+      </ul>
+    </nav>
+    </div>
   </div>
-  </header>
+</div>
+</header>
 <!-- end navigation -->
 
 <!-- hero -->
@@ -59,56 +61,48 @@ margin: 0 auto">
         <img src="img/bienvenue/Bienvenue_01_1200px.jpg" alt="Bienvenue á La Maison Introduction">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/bienvenue/Bienvenue_02_600px.jpg" media="(max-width:767px)">
         <img src="img/bienvenue/Bienvenue_02_1200px.jpg" alt="Bienvenue á La Maison Perspective Mockups">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/bienvenue/Bienvenue_03_600px.jpg" media="(max-width:767px)">
         <img src="img/bienvenue/Bienvenue_03_1200px.jpg" alt="Bienvenue á La Maison Approach">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/bienvenue/Bienvenue_04_600px.jpg" media="(max-width:767px)">
         <img src="img/bienvenue/Bienvenue_04_1200px.jpg" alt="Bienvenue á La Maison Research">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/bienvenue/Bienvenue_05_600px.jpg" media="(max-width:767px)">
         <img src="img/bienvenue/Bienvenue_05_1200px.jpg" alt="Bienvenue á La Maison Brand Development">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/bienvenue/Bienvenue_06_600px.jpg" media="(max-width:767px)">
         <img src="img/bienvenue/Bienvenue_06_1200px.jpg" alt="Bienvenue á La Maison User Flows">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/bienvenue/Bienvenue_07_600px.jpg" media="(max-width:767px)">
         <img src="img/bienvenue/Bienvenue_07_1200px.jpg" alt="Bienvenue á La Maison Rapid Prototyping">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/bienvenue/Bienvenue_08_600px.jpg" media="(max-width:767px)">
         <img src="img/bienvenue/Bienvenue_08_1200px.jpg" alt="Bienvenue á La Maison Usability Tests">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/bienvenue/Bienvenue_09_600px.jpg" media="(max-width:767px)">
@@ -116,7 +110,6 @@ margin: 0 auto">
       </picture>
     </div>
         <br />
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/bienvenue/bienvenue-animation.gif" media="(max-width:767px)">
@@ -124,17 +117,17 @@ margin: 0 auto">
       </picture>
     </div>
         <br />
+  </div>
+</div>
 <!-- end hero -->
-    </main>
+</main>
 
 <!-- footer -->
-<footer>
   <footer id="contact">
   <div class="container">
     <h1>Introduce yourself</h1>
     <p><h2>Wanna hire me? Get to know me? Shoot me an email!</h2>
       <a href="mailto:brianna@littlearrowstudio.com" class="button">Say hi</a>
-    </p>
   </div>
 <br />
 <!-- social media -->
