--- a/dailygrounds.html
+++ b/dailygrounds.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta meta charset="utf-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Brianna Nicole Jackson UI/UX Design DAiLYGROUNDS: a coffee subscription App for iOS</title>
 <!-- normalize -->
@@ -19,26 +19,28 @@
   <body>
     <header>
   <!-- navigation -->
-    <div class="container red topBotomBordersOut">
-            <div class="navtoggle" id="myNavtoggle">
-      <a href="index.html" class="noHover">
-        <picture>
-          <div id="logo">
-          <source srcset="img/logo1.svg" media="(max-width:767px)">
-          <img src="img/logo1.svg" alt="logo" class="logo">
-        </picture>
-      </a>
-      <nav>
-        <ul>
-    	     <li><a href="index.html">Work</a></li>
-    	     <li><a href="about.html">About</a></li>
-    	     <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
-           <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><img src="img/rainbow-menu.svg" <img class="noHover"></i></a></li>
+  <div class="container red topBotomBordersOut">
+          <div class="navtoggle" id="myNavtoggle">
+  <div id="logo">
+    <a href="index.html" class="noHover">
+      <picture>
+        <source srcset="img/logo1.svg" media="(max-width:767px)">
+        <img src="img/logo1.svg" alt="logo" class="logo">
+      </picture>
+    </a>
+    <nav>
+      <ul>
+         <li><a href="index.html">Work</a></li>
+         <li><a href="about.html">About</a></li>
+         <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
+         <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><img src="img/rainbow-menu.svg" alt="rainbow menu icon" class="noHover"></a></li>
 
-        </ul>
-      </nav>
+      </ul>
+    </nav>
+    </div>
   </div>
-  </header>
+</div>
+</header>
 <!-- end navigation -->
 
 <!-- hero -->
@@ -59,91 +61,78 @@ margin: 0 auto">
         <img src="img/dailygrounds/DAiLYGROUNDS-01_1200px.jpg" alt="DAiLYGROUNDS Cover">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/dailygrounds/DAiLYGROUNDS-02_600px.jpg" media="(max-width:767px)">
         <img src="img/dailygrounds/DAiLYGROUNDS-02_1200px.jpg" alt="DAiLYGROUNDS Introduction">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/dailygrounds/DAiLYGROUNDS-03_600px.jpg" media="(max-width:767px)">
         <img src="img/dailygrounds/DAiLYGROUNDS-03_1200px.jpg" alt="DAiLYGROUNDS Guiding Principles">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/dailygrounds/DAiLYGROUNDS-04_600px.jpg" media="(max-width:767px)">
         <img src="img/dailygrounds/DAiLYGROUNDS-04_1200px.jpg" alt="DAiLYGROUNDS Perspective Mockups">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/dailygrounds/DAiLYGROUNDS-05_600px.jpg" media="(max-width:767px)">
         <img src="img/dailygrounds/DAiLYGROUNDS-05_1200px.jpg" alt="DAiLYGROUNDS Brand Guide">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/dailygrounds/DAiLYGROUNDS-06_600px.jpg" media="(max-width:767px)">
         <img src="img/dailygrounds/DAiLYGROUNDS-06_1200px.jpg" alt="DAiLYGROUNDS User Stories">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/dailygrounds/DAiLYGROUNDS-07_600px.jpg" media="(max-width:767px)">
         <img src="img/dailygrounds/DAiLYGROUNDS-07_1200px.jpg" alt="DAiLYGROUNDS User Flows">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/dailygrounds/DAiLYGROUNDS-08_600px.jpg" media="(max-width:767px)">
         <img src="img/dailygrounds/DAiLYGROUNDS-08_1200px.jpg" alt="DAiLYGROUNDS Low-fidelity Wireframes">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/dailygrounds/DAiLYGROUNDS-09_600px.jpg" media="(max-width:767px)">
         <img src="img/dailygrounds/DAiLYGROUNDS-09_1200px.jpg" alt="DAiLYGROUNDS Mid-fidelity Wireframes">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/dailygrounds/DAiLYGROUNDS-10_600px.jpg" media="(max-width:767px)">
         <img src="img/dailygrounds/DAiLYGROUNDS-10_1200px.jpg" alt="DAiLYGROUNDS Hi-fidelity Wireframes">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/dailygrounds/DAiLYGROUNDS-11_600px.jpg" media="(max-width:767px)">
         <img src="img/dailygrounds/DAiLYGROUNDS-11_1200px.jpg" alt="DAiLYGROUNDS User Testing">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/dailygrounds/DAiLYGROUNDS-12_600px.jpg" media="(max-width:767px)">
         <img src="img/dailygrounds/DAiLYGROUNDS-12_1200px.jpg" alt="DAiLYGROUNDS Final Wireframes">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/dailygrounds/DAiLYGROUNDS-13_600px.jpg" media="(max-width:767px)">
         <img src="img/dailygrounds/DAiLYGROUNDS-13_1200px.jpg" alt="DAiLYGROUNDS Desktop Breakpoint">
       </picture>
     </div>
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/dailygrounds/DAiLYGROUNDS-14_600px.jpg" media="(max-width:767px)">
@@ -151,7 +140,6 @@ margin: 0 auto">
       </picture>
     </div>
         <br />
-    <div id="work">
       <div class="container">
       <picture>
         <source srcset="img/dailygrounds/dailygrounds-animation.gif" media="(max-width:767px)">
@@ -159,17 +147,17 @@ margin: 0 auto">
       </picture>
     </div>
         <br />
+  </div>
+</div>
 <!-- end hero -->
-    </main>
+</main>
 
 <!-- footer -->
-<footer>
   <footer id="contact">
   <div class="container">
     <h1>Introduce yourself</h1>
     <p><h2>Wanna hire me? Get to know me? Shoot me an email!</h2>
       <a href="mailto:brianna@littlearrowstudio.com" class="button">Say hi</a>
-    </p>
   </div>
 <br />
 <!-- social media -->
