--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta meta charset="utf-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Brianna Nicole Jackson UI/UX Designer</title>
 
@@ -22,9 +22,9 @@
 <!-- navigation -->
   <div class="container red topBotomBordersOut">
           <div class="navtoggle" id="myNavtoggle">
+  <div id="logo">
     <a href="index.html" class="noHover">
       <picture>
-        <div id="logo">
         <source srcset="img/logo1.svg" media="(max-width:767px)">
         <img src="img/logo1.svg" alt="logo" class="logo">
       </picture>
@@ -34,10 +34,12 @@
   	     <li><a href="index.html">Work</a></li>
   	     <li><a href="about.html">About</a></li>
   	     <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
-         <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><img src="img/rainbow-menu.svg" <img class="noHover"></i></a></li>
+         <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><img src="img/rainbow-menu.svg" alt="rainbow menu icon" class="noHover"></a></li>
 
       </ul>
     </nav>
+    </div>
+  </div>
 </div>
 </header>
 <!-- end navigation -->
@@ -1062,13 +1064,11 @@ margin: 0 auto">
     </main>
 
 <!-- footer -->
-  <footer>
     <footer id="contact">
     <div class="container">
       <h1>Introduce yourself</h1>
       <p><h2>Wanna hire me? Get to know me? Shoot me an email!</h2>
         <a href="mailto:brianna@littlearrowstudio.com" class="button">Say hi</a>
-      </p>
     </div>
 <br />
 <!-- social media -->
